Basics/network/GatewayAPI/4.http-timeouts.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    service: backend
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v1
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      serviceAccountName: backend
      containers:
        - image: registry.k8s.io/gateway-api/echo-basic:v1.5.1
          imagePullPolicy: IfNotPresent
          name: backend
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "10m"
              memory: "30Mi"
            limits:
              cpu: "20m"
              memory: "50Mi"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  hostnames:
    - "eg-example.tluapitest.com"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: backend
        port: 3000
        weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: "4s"




## 设置为两秒测试
# cat <<EOF | kubectl apply -f -
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: backend
# spec:
#   hostnames:
#     - "eg-example.tluapitest.com"
#   parentRefs:
#     - group: gateway.networking.k8s.io
#       kind: Gateway
#       name: eg
#       namespace: envoy-gateway-system
#   rules:
#     - backendRefs:
#       - group: ""
#         kind: Service
#         name: backend
#         port: 3000
#         weight: 1
#       matches:
#         - path:
#             type: PathPrefix
#             value: /
#       timeouts:
#         request: "2s"
# EOF
